[package]
name = "nika"
version = "0.1.0"
authors = ["Magazzù Giuseppe"]
edition = "2021"
description = "Japanese learning CLI"
readme = "README.md"
repository = "https://github.com/saiteki-kai/nika"
license = "MIT"
default-run = "nika"

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
chrono = "0.4.35"
clap = { version = "4.4.6", features = ["derive"] }
confy = "0.5.1"
dirs = "5.0.1"
flate2 = "1.0.28"
once_cell = "1.18.0"
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = "1.0.190"
serde_derive = "1.0.190"
serde_json = "1.0.108"
tar = "0.4.40"
tracing = "0.1.40"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"

[[bin]]
name = "nika"
path = "src/bin/main.rs"

[[bin]]
name = "nika-updater"
path = "src/bin/updater.rs"

[dev-dependencies]
tempfile = "3.10.1"
test-case = "3.3.1"
