[package]
name = "nika"
description = "Japanese learning CLI"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
default-run = "nika"

[workspace]
members = ["nika-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Magazzù Giuseppe"]
readme = "README.md"
repository = "https://github.com/saiteki-kai/nika"
license = "GPL-3.0"

[workspace.dependencies]
nika-core = { version = "*", path = "nika-core" }

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
clap = { version = "4.4.6", features = ["derive"] }
dirs = "5.0.1"
flate2 = "1.0.28"
nika-core = { workspace = true }
once_cell = "1.18.0"
rand = "0.8.5"
rayon = "1.8.0"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = "1.0.190"
serde_derive = "1.0.190"
serde_json = "1.0.108"
snapbox = "0.5.9"
tar = "0.4.40"
thiserror = "1.0.57"
toml = "0.8.12"
tracing = "0.1.40"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"

[[bin]]
name = "nika"
path = "src/bin/main.rs"

[[bin]]
name = "nika-updater"
path = "src/bin/updater.rs"
