[package]
name = "nika-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bincode = "1.3.3"
chrono = "0.4.37"
rand = "0.8.5"
rayon = "1.10.0"
rusqlite = "0.31.0"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
thiserror = "1.0.58"
toml = "0.8.12"

[dev-dependencies]
tempfile = "3.10.1"
test-case = "3.3.1"
